<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (2024) Beijing Volcano Engine Technology Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Create Date : 2024/05/14
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_image_detail">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f4f5f7"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/basic_info"
        tools:ignore="RtlSymmetry" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:action="@string/copy"
        app:action_bt_color="@color/color_165dff"
        app:name="@string/image_url"
        tools:detail="http://imagex-sdk.volcimagextest.com/response.heif" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/image_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/image_type"
        tools:data="heic" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/file_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/file_size"
        tools:data="425KB" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/image_resolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/image_resolution"
        tools:data="120*120" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/image_load_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/image_load_source"
        tools:data="1" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/network_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/network_time_consumption"
        tools:data="14ms" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/decode_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/decode_duration"
        tools:data="1ms" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/load_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/load_status"
        tools:data="success" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/error_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/error_code"
        tools:data="success" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/error_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/error_description"
        tools:data="success" />


</LinearLayout>