<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (2024) Beijing Volcano Engine Technology Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Create Date : 2024/05/14
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f7f8fa"
    tools:context=".ui.SettingsActivity">

    <com.bytedance.imagexdemo.ui.view.CommonTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings" />

    <TextView
        android:id="@+id/tv_basic_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/basic_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        app:action="@string/modification"
        app:action_bt_color="@color/color_1664ff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_basic_setting"
        app:name="@string/app_id" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/setting_item_app_id"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        app:action="@string/modification"
        app:action_bt_color="@color/color_1664ff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_basic_setting"
        app:name="@string/app_id" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/setting_item_cloud_control"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:action="@string/check"
        app:action_bt_color="@color/color_1664ff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_item_app_id"
        app:name="@string/cloud_control_settings" />


    <TextView
        android:id="@+id/tv_cache_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/cache_clear"
        android:textColor="@color/color_86909c"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_item_cloud_control" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/setting_item_disc_cache"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        app:action="@string/clear"
        app:action_bt_color="@color/color_e63f3f"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cache_clear"
        app:name="@string/disc_cache" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/setting_item_memory_cache"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:action="@string/clear"
        app:action_bt_color="@color/color_e63f3f"
        app:content_info="@string/clear_all_at_once"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_item_disc_cache"
        app:name="@string/memory_cache" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_ignore_memory_cache"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:text="@string/ignore_memory_cache"
        android:textColor="@color/color_1d2129"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/setting_item_memory_cache"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_ignore_disc_cache"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:text="@string/ignore_disc_cache"
        android:textColor="@color/color_1d2129"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/sw_ignore_memory_cache"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />


</androidx.constraintlayout.widget.ConstraintLayout>