<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (2024) Beijing Volcano Engine Technology Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Create Date : 2024/05/14
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_image_detail">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f4f5f7"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/log_info"
        tools:ignore="RtlSymmetry" />

    <com.bytedance.imagexdemo.ui.view.OperateInfoItemView
        android:id="@+id/load_monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:action="@string/copy"
        app:action_bt_color="@color/color_165dff"
        app:name="@string/imagex_load_monitor" />

    <TextView
        android:id="@+id/tv_log_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_1e252e"
        android:paddingStart="30dp"
        android:paddingTop="16dp"
        android:paddingEnd="30dp"
        android:paddingBottom="16dp"
        android:textColor="@color/white"
        tools:text="@string/log_demo" />


</LinearLayout>