<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (2024) Beijing Volcano Engine Technology Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Create Date : 2024/05/14
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".ui.SplashActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_ve"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:padding="12dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:round="16dp" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_words"
        android:textColor="@color/color_0c0d0e"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_ve"
        app:layout_constraintTop_toBottomOf="@+id/iv_ve" />

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bytedance_tip_words"
        android:textColor="@color/color_737a87"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="42dp"
        android:inputType="number"
        android:background="@drawable/et_input_bg"
        android:hint="@string/input_hint"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textColorHint="@color/color_80838a"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tips"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_experience_immediately"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_experience"
        android:elevation="10dp"
        android:gravity="center"
        android:shadowRadius="10"
        android:text="@string/experience_immediately"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/et_input"
        app:layout_constraintRight_toRightOf="@+id/et_input"
        app:layout_constraintTop_toBottomOf="@+id/et_input" />


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_read_and_agree"
        android:textSize="12sp"
        android:checked="true"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_protocol"
        app:layout_constraintTop_toBottomOf="@+id/bt_experience_immediately" />

    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/user_privacy_agreement"
        android:textColor="@color/color_80838a"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox"
        app:layout_constraintLeft_toRightOf="@+id/checkbox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/powered_by"
        android:textColor="@color/color_4e5969"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>