<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (2024) Beijing Volcano Engine Technology Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Create Date : 2024/05/14
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ImageDetailActivity">

    <com.bytedance.imagexdemo.ui.view.CommonTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:title="@string/decode_info" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/simple_drawee_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:viewAspectRatio="1" />

            <include
                android:id="@+id/basic_info"
                layout="@layout/layout_image_basic_info" />

            <include
                android:id="@+id/log_info"
                layout="@layout/layout_image_log_info" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_play_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pause"
            android:textColor="@color/color_111214" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_e6e6eb" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="@color/color_111214" />

    </LinearLayout>


</LinearLayout>